good place to save.
seach functionality complete

--- a/electron-quick-start/assets/css/page.css
+++ b/electron-quick-start/assets/css/page.css
@@ -7,11 +7,12 @@
     bottom: 0;
     overflow-x: hidden;
     overflow-y: auto;
-    color: var(--color-accent);
+   
   
     /* Hide */
     pointer-events: none;
     visibility: hidden;
+    display:none;
     opacity: 0;
     transform: translateX(-20px);
     transition: visibility 0s .12s linear , opacity .12s ease-in, transform .12s ease-in;
@@ -19,7 +20,15 @@
   .page.is-shown {
     pointer-events: auto;
     visibility: visible;
+    display: inline;
     opacity: 1;
     transform: translateX(0);
     transition: visibility 0s 0s linear , opacity .36s ease-out, transform .36s ease-out;
+  }
+
+  #mainContent {
+    min-width: 800px;
+    min-height: 600px;
+    overflow-x: hidden;
+    overflow-y: auto;
   }
