--- a/electron-quick-start/assets/css/header.css
+++ b/electron-quick-start/assets/css/header.css
@@ -1,36 +1,29 @@
 #header-bar {
     width: 100%;
+    height: 5%;
+    background-color: #3c4853;
 }
 
 .header-button {
-    display: inline-block;
-    width: 100px;
-    height: 40px;
-    line-height: 40px;
+    display: block;
     text-align: center;
     cursor: pointer;
+    height: 100%;
+    color: #fff;
 }
 
 #logo-icon {
-    left: 0;
-    position: absolute;
-    background-color: red;
+    background-color: #6bb2c7;
 }
 
 #logout {
-    right: 0;
-    position: absolute;
-    background-color: green;
+    
 }
 
 #user-settings {
-    right: 100px;
-    position: absolute;
-    background-color: purple;
+    
 }
 
 #online-status {
-    right: 200px;
-    position: absolute;
-    background-color: gold
+    
 }
