--- a/electron-quick-start/assets/css/report.css
+++ b/electron-quick-start/assets/css/report.css
@@ -17,3 +17,11 @@
     background-color: #3C4853;
     border-bottom: 1px solid #fff;
 }
+
+table, td, tr {
+    border: 1px solid;
+}
+
+table {
+    border-collapse: collapse
+}
